<resources>
    <string name="app_name">Play It Safe</string>
    <string name="btnCreateEvent">Create Event</string>
    <string name="btnCheckIn">Check In</string>
    <string name="btnPlay">Play</string>
    <string name="btnDatabase">Database</string>
    <string name="btnSave">Save</string>
    <string name="btnProceed">Proceed</string>
    <string name="btnConfirm">Confirm</string>
    <string name="btnGenerate">Generate Code</string>
    <string name="btnStart">Start</string>
    <string name="btnBack">Back</string>
    <string name="label_first_name">First Name</string>
    <string name="label_last_name">Last Name</string>
    <string name="label_email">Email</string>
    <string name="etEmail_hint">Email Address</string>
    <string name="label_phone_number">Phone Number</string>
    <string name="label_location_colon">Location:</string>
    <string name="label_date_colon">Date:</string>
    <string name="tvLocation_text">Unknown</string>
    <string name="tvDate_text">Unknown</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="etEventID_hint">Enter Event Name</string>
    <string name="start_playing">Start Playing</string>
    <string name="etStartingPoints_hint">20</string>
    <string name="tvStartingPoints_text">Starting Points</string>
    <string name="tvPlayerCount_text">Number of Players</string>
    <string name="tvBeginner_text">Determine Beginner</string>
    <string name="tvSeekBarLabel_text">2</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="player_3">Player 3</string>
    <string name="player_4">Player 4</string>
    <string name="player_one">Player 1</string>
    <string name="player_two">Player 2</string>
    <string name="player_three">Player 3</string>
    <string name="player_four">Player 4</string>
    <string name="tvP1points">20</string>
    <string name="tvP2points">20</string>
    <string name="tvP3points">20</string>
    <string name="tvP4points">20</string>
    <string name="default_starting_points">20</string>
    <string name="player_names">Player Names</string>
    <string name="will_begin">" will begin."</string>
    <string name="alertOutdatedEvent_title">Warning: Outdated Event</string>
    <string name="alertOutdatedEvent_message">The event you are entering is using an outdated timecode and might already be over. Are you sure you want to register regardless?</string>
    <string name="alertQRcodePlay_title">Has every player scanned your QR-Code?</string>
    <string name="alertQRcodePlay_message">Make sure everyone is registered before you continue.</string>
    <string name="alertQRcodeBack_title">Warning: Your code will be lost!</string>
    <string name="alertQRcodeBack_message">Are you sure you want to go back?</string>
    <string name="alertEventClicked_title">"Log positive test result for event "</string>
    <string name="alertEventClicked_message">All participants will be notified.</string>
    <string name="alertPlayTwoBack_message">Are you sure you want to leave?</string>
    <string name="toast_checkin1">"You\'ve successfully checked into the event"</string>
    <string name="toast_checkin2">" under the name "</string>
    <string name="toast_eventStart">"Started Event: "</string>
    <string name="toast_unknownCode">Unknown Code</string>
    <string name="generated_code">Generated Code</string>
</resources>
